@@ -29,6 +29,7 @@ xxx_format: [<extension>], The extension to use for a type of document. The type
 xxx_editor: [<editor>], The editor to use for a type of document. The types of document are the same as the xxx_format option, plus pdf_editor in case you have a pdf editor.
 format: [<extension>], The extension to use by default if the document type is not defined by an xxx_format option.
 editor: [<editor>], The editor to use by default if the document type is not defined by an xxx_editor option. If this is not defined, will use the EDITOR environment variable instead.
+decode_utf_8: [True,False], When you retrieve docs from the server, you can have GoogleCL try to decode them from UTF-8 immediately. Most users will not need to worry about this, but it's handy if you have an application sensitive to unicode characters such as `less` or `tex`.
 
 2.4 GENERAL
 url_style: [site, direct], Which sub-style to use for listing urls. Site will typically put you at the website, while direct is usually a link directly to the resource.
